--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,6 +5,7 @@ bidict==0.21.2
 chardet==4.0.0
 idna==3.1
 multidict==5.1.0
+python-dotenv==0.17.0
 python-engineio==4.0.1
 python-socketio==5.1.0
 typing-extensions==3.7.4.3
